@@ -35,7 +35,7 @@ use v5.10;
 use EBox;
 use EBox::Gettext;
 use EBox::Global;
-use EBox::RemoteServices::Types::EBoxCommonName;
+#use EBox::RemoteServices::Types::EBoxCommonName;
 use EBox::Types::Text;
 use EBox::Types::HTML;
 use POSIX;
@@ -101,10 +101,10 @@ sub _table
 
     my @tableDesc =
       (
-          new EBox::RemoteServices::Types::EBoxCommonName(
-              fieldName     => 'server_name',
-              printableName => __('Server name'),
-             ),
+#          new EBox::RemoteServices::Types::EBoxCommonName(
+#              fieldName     => 'server_name',
+#              printableName => __('Server name'),
+#             ),
           new EBox::Types::Text(
               fieldName     => 'edition',
               printableName => __('Server edition'),
