@@ -1,4 +1,5 @@
 4.0
+	+ Removed unexisting reference to RemoteServices
 	+ Fixed i18n bug in progress dialog
 	+ Updated remoteservices dependencies
 	+ Rename Import/Export Configuration to Configuration Backup
